read more arrow and text fixed!! Should align no matter what view.

--- a/client/src/stylesheets/css/main.css
+++ b/client/src/stylesheets/css/main.css
@@ -213,20 +213,24 @@ textarea {
 
 .readmore-subBlock {
   margin-left: 6rem;
+  margin-bottom: 5rem;
   -webkit-animation: slideIn 2s forwards, bounce 6s 2s infinite;
   -moz-animation: slideIn 2s forwards, bounce 6s 2s infinite;
   animation: slideIn 2s forwards, bounce 6s 2s infinite; }
 
+.readmore-subBlock-transform {
+  transform: rotate(270deg); }
+
 .readmore-text {
   font-family: Peleguer, serif;
   font-size: 3rem;
-  color: white;
-  transform: rotate(270deg); }
+  color: white; }
 
 .arrow {
-  height: 4rem;
-  margin-top: 7rem;
-  margin-left: 3.2vmax; }
+  float: left;
+  width: 4rem;
+  margin-right: 2rem;
+  margin-top: 0.4rem; }
 
 .aboutHeader {
   font-family: LeagueGothic, sans-serif;
@@ -839,11 +843,6 @@ li {
   .readmore-block {
     bottom: 4vw; }
 
-  .arrow {
-    height: 4rem;
-    margin-top: 5vw;
-    margin-left: 5.3vw; }
-
   /* ===============================================RECIPE EDIT PAGE================================================ */
   .ERSubmit {
     font-size: 3.5rem; }
@@ -857,20 +856,11 @@ li {
 @media only screen and (max-width: 1690px) {
   /* ===============================================HOME PAGE================================================ */
   .loginBox {
-    margin-top: -2.5vw; }
-
-  .arrow {
-    margin-left: 3.8vmax; } }
+    margin-top: -2.5vw; } }
 @media only screen and (max-width: 1450px) {
   /* ===============================================HOME PAGE================================================ */
   .loginBox {
     margin-top: -4.2rem; }
-
-  .readmore-description {
-    bottom: 13vw; }
-
-  .arrow {
-    margin-left: 11vmin; }
 
   /* ===============================================USER PAGE================================================ */
   .header-image-class {
@@ -882,12 +872,6 @@ li {
   .loginBox {
     padding: 2em 7em 2em 4em;
     margin-top: -3.3vw; }
-
-  .readmore-description {
-    bottom: 13vw; }
-
-  .arrow {
-    margin-left: 9.3vmin; }
 
   /* ===============================================USER PAGE================================================ */
   .search-btn {
@@ -917,11 +901,14 @@ li {
     font-size: 1.3vw; } }
 @media only screen and (max-width: 1045px) and (min-width: 992px) {
   /* ===============================================HOME PAGE================================================ */
-  .readmore-text {
-    font-size: 2.5rem; }
+  .readmore-block {
+    top: 40vw; }
 
-  .arrow {
-    margin-left: 5.1vmin; }
+  .readmore-text {
+    font-size: 2rem; }
+
+  .readmore-subBlock {
+    margin-bottom: -3rem; }
 
   /* ===============================================USER PAGE================================================ */
   .search-btn {
