--- a/client/src/stylesheets/scss/components/_homereadmore.scss
+++ b/client/src/stylesheets/scss/components/_homereadmore.scss
@@ -25,20 +25,25 @@
 
 .readmore-subBlock {
     margin-left: 6rem;
+    margin-bottom: 5rem;
     -webkit-animation: slideIn 2s forwards, bounce 6s 2s infinite;
     -moz-animation: slideIn 2s forwards, bounce 6s 2s infinite;
     animation: slideIn 2s forwards, bounce 6s 2s infinite;
+}
+
+.readmore-subBlock-transform {
+    transform: rotate(270deg);
 }
 
 .readmore-text {
     font-family: $body-font;
     font-size: 3rem;
     color: white;
-    transform: rotate(270deg);
 }
 
 .arrow {
-    height: 4rem;
-    margin-top: 7rem;
-    margin-left: 3.2vmax;
+    float: left;
+    width: 4rem;
+    margin-right: 2rem;
+    margin-top: 0.4rem;
 }
